# whar-models

./: .gitignore  README.md  pyproject.toml
src/whar_models/: __init__.py  base.py  registry.py
src/whar_models/_shared/: adapter.py  architecture.py  classical.py  wrapper.py
src/whar_models/aroma_joint_model/: __init__.py  model.py
src/whar_models/attend_discriminate/: __init__.py  model.py
src/whar_models/attensense/: __init__.py  model.py
src/whar_models/cnn_har/: __init__.py  model.py
src/whar_models/dana/: __init__.py  model.py
src/whar_models/deepconv_lstm/: __init__.py  model.py
src/whar_models/deepconv_lstm_attention/: __init__.py  model.py
src/whar_models/deepconv_lstm_iswc/: __init__.py  model.py
src/whar_models/deepsense/: __init__.py  model.py
src/whar_models/dynamic_whar/: __init__.py  model.py
src/whar_models/global_fusion/: __init__.py  model.py
src/whar_models/if_conv_transformer/: __init__.py  model.py
src/whar_models/knn/: __init__.py  model.py
src/whar_models/lstms_ensemble/: __init__.py  model.py
src/whar_models/mlp_har/: __init__.py  model.py
src/whar_models/mlp_mixer/: __init__.py  model.py
src/whar_models/random_forest/: __init__.py  model.py
src/whar_models/sa_har/: __init__.py  model.py
src/whar_models/svm/: __init__.py  model.py
src/whar_models/tinierhar/: __init__.py  model.py  tinierhar_model.py
src/whar_models/tinyhar/: __init__.py  model.py
src/whar_models/triple_cross_domain_attention/: __init__.py  model.py
tests/: test_registry.py
