[project]
name = "whar-models"
version = "0.1.0"
description = "Model registry and reference architectures for WHAR Arena"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scikit-learn==1.8.0",
    "torch>=2.7.1",
    "tsfresh>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
